# arduino-exp

./: .gitignore  pyproject.toml
day1/LED_test/: LED_test.ino
day1/ad_convert/: ad_convert.ino
day1/buzzer_out_test.ino/: buzzer_out_test.ino.ino
day1/detect_tact_switch/: detect_tact_switch.ino
day1/serial_port_test/: serial_port_test.ino
day1/sketch_nov29a/: sketch_nov29a.ino
day1/test_dip_test/: test_dip_test.ino
day1/test_sensor/: test_sensor.ino
day2/connect_wifi_test/: connect_wifi_test.ino
day2/show_clock/: show_clock.ino
day2/ssd1306_128x64_i2c/: ssd1306_128x64_i2c.ino
day2/time_sync/: time_sync.ino
day3/: tcp_client.py
day3/build_tcp_server/: build_tcp_server.py
day3/tcp_client/: tcp_client.ino
day3/utils/: utils.ino
final/: final.ino
