[tool.poetry]
name = "arduino-exp"
version = "0.1.0"
description = ""
authors = ["Tano <64388900+tanomitsu2002@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "arduino_exp"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
